--- a/Fase 3 - Programacion Orientada a Objetos/Tema 08 - Programacion Orientada a Objetos/Leccion 4 - Metodos especiales de clase.ipynb
+++ b/Fase 3 - Programacion Orientada a Objetos/Tema 08 - Programacion Orientada a Objetos/Leccion 4 - Metodos especiales de clase.ipynb
@@ -1,6 +1,204 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pelicula:\n",
+    "    # Constructor de clase\n",
+    "    def __init__(self, titulo = None, duracion = None, lanzamiento = None):\n",
+    "        self.titulo = titulo\n",
+    "        self.duracion = duracion\n",
+    "        self.lanzamiento =  lanzamiento\n",
+    "\n",
+    "        print(\"Se ha creado la pelicula\", self.titulo)\n",
+    "\n",
+    "    # Destructor\n",
+    "    # El destructor se activa cuando se termina el script \n",
+    "    def __del__(self):\n",
+    "        print(\"Se esta borrando la pelicula\", self.titulo)\n",
+    "\n",
+    "    # Redefinición del método string\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.titulo} lanzada en {self.lanzamiento} con una duración de {self.duracion} minutos\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha creado la pelicula El Padrino\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Pelicula(\"El Padrino\", 175, 1972)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se esta borrando la pelicula El Padrino\n"
+     ]
+    }
+   ],
+   "source": [
+    "# En jupyter se crea una copia y se elimina dos veces\n",
+    "del(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha creado la pelicula El Padrino\n",
+      "Se esta borrando la pelicula El Padrino\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'El Padrino lanzada en 1972 con una duración de 175 minutos'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Pelicula(\"El Padrino\", 175, 1972)\n",
+    "str(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'Pelicula' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Armando\\Documents\\CursoPython\\Fase 3 - Programacion Orientada a Objetos\\Tema 08 - Programacion Orientada a Objetos\\Leccion 4 - Metodos especiales de clase.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Armando/Documents/CursoPython/Fase%203%20-%20Programacion%20Orientada%20a%20Objetos/Tema%2008%20-%20Programacion%20Orientada%20a%20Objetos/Leccion%204%20-%20Metodos%20especiales%20de%20clase.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mlen\u001b[39;49m(p)\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'Pelicula' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "len(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pelicula:\n",
+    "    # Constructor de clase\n",
+    "    def __init__(self, titulo = None, duracion = None, lanzamiento = None):\n",
+    "        self.titulo = titulo\n",
+    "        self.duracion = duracion\n",
+    "        self.lanzamiento =  lanzamiento\n",
+    "\n",
+    "        print(\"Se ha creado la pelicula\", self.titulo)\n",
+    "\n",
+    "    # Destructor\n",
+    "    # El destructor se activa cuando se termina el script \n",
+    "    def __del__(self):\n",
+    "        print(\"Se esta borrando la pelicula\", self.titulo)\n",
+    "\n",
+    "    # Redefinición del método string\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.titulo} lanzada en {self.lanzamiento} con una duración de {self.duracion} minutos\"\n",
+    "\n",
+    "    # Redefinicion del metodo length\n",
+    "    def __len__(self):\n",
+    "        return self.duracion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha creado la pelicula El Padrino\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "175"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Pelicula(\"El Padrino\", 175, 1972)\n",
+    "len(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bfd6de612843adf5017377cffceacebca28d631d77275f6d7ed4290b25deabee"
+   }
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
