--- a/Fase 3 - Programacion Orientada a Objetos/Tema 08 - Programacion Orientada a Objetos/Leccion 5 - Objetos dentro de objetos.ipynb
+++ b/Fase 3 - Programacion Orientada a Objetos/Tema 08 - Programacion Orientada a Objetos/Leccion 5 - Objetos dentro de objetos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -23,10 +23,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "class Catalogo:\n",
+    "    peliculas = []\n",
+    "\n",
+    "    def __init__(self, *peliculas):\n",
+    "       for pelicula in peliculas:\n",
+    "            self.peliculas.append(pelicula)\n",
+    "\n",
+    "    def agregar(self, p):\n",
+    "        self.peliculas.append(p)\n",
+    "    \n",
+    "    def mostrar(self):\n",
+    "        for pelicula in self.peliculas:\n",
+    "            print(pelicula) # Tomara por defecto el metodo str() redefinido en la clase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha creado la película: El padrino\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Pelicula(\"El padrino\", 175, 1972)\n",
+    "\n",
+    "c = Catalogo(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El padrino (1972)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.mostrar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha creado la película: El padrino: Parte 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.agregar(Pelicula(\"El padrino: Parte 2\", 202, 1974))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El padrino (1972)\n",
+      "El padrino: Parte 2 (1974)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.mostrar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -47,7 +139,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bfd6de612843adf5017377cffceacebca28d631d77275f6d7ed4290b25deabee"
+   }
   }
  },
  "nbformat": 4,
